[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "PIC_data_processing"
version = "0.0.1"
authors = [
  { name="nick33990", email="nikitos33990@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nick33990/PIC_data_processing"
